--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "dependencies": {
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "babel-plugin-emotion": "^10.0.33",
+    "firebase": "^7.14.6",
+    "firebase-admin": "^8.12.1",
+    "firebase-functions": "^3.6.2",
     "next": "9.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
