--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
     "babel-plugin-emotion": "^10.0.33",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "firebase": "^7.14.6",
     "firebase-admin": "^8.12.1",
     "firebase-functions": "^3.6.2",
+    "gray-matter": "^4.0.2",
     "next": "9.4.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2",
     "uuid": "^8.1.0"
   },
   "devDependencies": {}
